src/objects/slider__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>heading__c</fullName>
        <label>heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subheading__c</fullName>
        <label>subheading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>slider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>slider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>slider</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>